--- a/package.json
+++ b/package.json
@@ -22,10 +22,15 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@canvasjs/angular-charts": "^1.0.3",
+    "@canvasjs/charts": "^3.7.24",
     "@ng-bootstrap/ng-bootstrap": "^12.1.1",
     "@popperjs/core": "^2.10.2",
+    "@types/canvasjs": "^1.9.10",
     "@types/popper.js": "^1.11.0",
     "bootstrap": "^5.1.3",
+    "canvasjs": "^1.8.3",
+    "chart.js": "^4.4.0",
     "ng2-search-filter": "^0.5.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
