--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bootstrap": "^5.1.3",
     "canvasjs": "^1.8.3",
     "chart.js": "^4.4.0",
+    "ng-apexcharts": "^1.8.0",
     "ng2-search-filter": "^0.5.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
